# AQSensor

./: .gitignore  README.md
buzzer/: main.py  secrets.py
gateway/: docker-compose.yml  prometheus.yml
gateway/kongregator/: Cargo.toml  Dockerfile
gateway/kongregator/src/: main.rs
gateway/telegrambot/: Dockerfile  main.py  pyproject.toml  requirements.txt
sensor/: AQ.ino
