[package]
name = "kongregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
lazy_static = "1.4.0"
prometheus = "0.13.3"
reqwest = { version = "0.11.22", features = ["rustls-tls"], default_features = false }
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
strip = true
