[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytelegrambotapi = "^4.14.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
